# cmake-freetype-harfbuzz

./: CMakeLists.txt  README.md  build.bat  build.sh  freetype-harfbuzz-windows-fix.patch  test.cpp
